cmake_minimum_required(VERSION 2.8.12.2)

project(examples)

include_directories(../src/qsa ../src/ide)
if(${QSA_NEW_EDITOR})
include_directories(neweditor)
else()
include_directories(editor)
endif(${QSA_NEW_EDITOR})
set(CMAKE_INCLUDE_CURRENT_DIR ON)

add_subdirectory(console)
add_subdirectory(enums)
add_subdirectory(filter)
add_subdirectory(game)
add_subdirectory(importscript)
add_subdirectory(scribblescripter)
add_subdirectory(scriptbutton)
add_subdirectory(spreadsheet)
add_subdirectory(wrappers)
